# LibTabularasa

./: .drone.jsonnet  .drone.yml  CMakeLists.txt  LICENSE  README.md
contrib/: coverage.html
debian/: README  changelog  control  copyright
tabularasa/: AnsiColor.cpp  AnsiColor.hpp  CMakeLists.txt  CellColor.cpp  CellColor.hpp  HorizontalAlignment.cpp  HorizontalAlignment.hpp  Table.cpp  Table.hpp  TableCell.cpp  TableCell.hpp  TableColumn.cpp  TableColumn.hpp  TableRow.cpp  TableRow.hpp  tabularasa.pc.in
unittest/: CMakeLists.txt  CellColorTest.cpp  TableColumnTest.cpp  TableTest.cpp  gtest_main.cpp
